# git-draft

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/: setup.yaml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  ci.yml  pr-metadata.yaml  pr.yaml  pr.yml  tag.yaml  test.yaml
docs/: git-draft.1.adoc  git-draft.adoc
src/draft/: __main__.py
src/git_draft/: __init__.py  __main__.py  actions.py  backend.py  common.py  drafter.py  editor.py  feedback.py  git.py  instructions.py  manager.py  progress.py  prompt.py  store.py  toolbox.py  user_feedbacks.py  worktrees.py
src/git_draft/assistants/: openai.py
src/git_draft/bots/: __init__.py  claude_code.py  common.py  openai.py
src/git_draft/bots/openai_api/: assistants.py
src/git_draft/events/: __init__.py  common.py  feedback_events.py  worktree_events.py
src/git_draft/prompts/: add-docstrings.jinja  add-test.jinja
src/git_draft/prompts/includes/: file-list.jinja
src/git_draft/queries/: add-action.sql  add-folio.sql  add-prompt.sql  create-tables.sql  get-folio-by-id.sql  get-latest-folio-prompt.sql  get-latest-prompt.sql  list-drafts.sql  list-prompts.sql
tests/draft/: backend_test.py
tests/git_draft/: assistant_test.py  backend_test.py  common_test.py  conftest.py  drafter_test.py  editor_test.py  manager_test.py  prompt_test.py  store_test.py  toolbox_test.py  work_trees_test.py  worktrees_test.py
tests/git_draft/bots/: __init___test.py  claude_code_test.py  common_test.py
tests/git_draft/events/: __init___test.py
